[level 3] Title: [카카오 인턴] 보석 쇼핑, Time: 71.09 ms, Memory: 81 MB -BaekjoonHub