@@ -1,41 +1,54 @@
-import java.util.*;
+
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 
 public class Solution {
 
-    public int[] solution(String[] gems) {
-        int[] answer = {};
-        Set<String> gemSet = new HashSet<>(List.of(gems));
+    public static int[] solution(String[] gems) {
+        int[] answer = {0 ,0};
+        int minLength = gems.length + 1;
+
+        final Set<String> kinds = new HashSet<>();
+        kinds.addAll(Arrays.asList(gems));
+
+        Map<String, Integer> map = new HashMap<>();
 
         int start = 0;
-        int end = gems.length - 1;
+        int end = 0;
+        while (end < gems.length) {
 
-        int s = 0;
-        int e = 0;
-        
-        Map<String, Integer> includes = new HashMap<>();
-        includes.put(gems[s], 1);
+            map.put(gems[end], map.getOrDefault(gems[end], 0) + 1);
 
-        while (s < gems.length) {
-
-            if (includes.keySet().size() == gemSet.size()) { 
-                if (e - s < end - start) { 
-                    start = s;
-                    end = e;
-                }
-
-                includes.put(gems[s], includes.get(gems[s]) - 1);
-                if (includes.get(gems[s]) == 0) {
-                    includes.remove(gems[s]);
-                }
-                s++;
-            } else if (e < gems.length - 1) { 
-                e++;
-                includes.put(gems[e], includes.getOrDefault(gems[e], 0) + 1);
-            } else {
-                break;
+            if (map.size() < kinds.size())
+            {
+                ++end;
+                continue;
             }
+
+            while (true) {
+                if (map.get(gems[start]) > 1) {
+                    map.put(gems[start], map.get(gems[start]) - 1);
+                    start++;
+                }
+                else
+                {
+                    break;
+                }
+            }
+
+            if(minLength > end - start + 1)
+            {
+                minLength = end - start + 1;
+                answer[0] = start + 1;
+                answer[1] = end + 1;
+            }
+            ++end;
         }
-        
-        return new int[]{start + 1, end + 1};
+
+        return answer;
     }
+
 }
